# Nizam-AI

./: .gitignore  CMakeLists.txt  README.md  build_core.py  nizam_cli.py  requirements.txt
app/: server.py
app/static/css/: style.css
app/static/js/: dashboard.js
app/templates/: index.html
core/include/: nizam_core.h
core/src/: nizam_core.cpp
nizam/: __init__.py  core_wrapper.py  distributed.py  edge.py  hybrid.py  integrations.py  pqc_tunnel.py  quantum.py  robotics.py  security.py  storage.py
nizam/pilots/: __init__.py  defense.py  education.py  health.py
tests_nizam/: test_nizam.py
